force-app/main/default/objects/ilms__Shared_Certifications__c/ilms__Shared_Certifications__c.object-meta.xml
<CustomObject>
    <label>Shared Certification</label>
    <nameField>
        <displayFormat>Cert-{0000}</displayFormat>
        <label>Shared Certifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>