force-app/main/default/objects/ilms__Shared_Certifications__c/fields/ilms__Certification__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>ilms__Certification__c</referenceTo>
    <relationshipLabel>Shared Certifications</relationshipLabel>
    <relationshipName>Shared_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>