force-app/main/default/objects/ilms__Shared_Certifications__c/fields/ilms__Certification_Image__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification_Image__c</fullName>
    <formula>ilms__Certification__r.ilms__Certification_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Image</label>
    <type>Text</type>
</CustomField>