force-app/main/default/objects/ilms__Shared_Certifications__c/fields/ilms__Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification_Name__c</fullName>
    <formula>ilms__Certification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Name</label>
    <type>Text</type>
</CustomField>