force-app/main/default/objects/ilms__Shared_Certifications__c/fields/ilms__Library_Sharing_Groups__c.field-meta.xml
<CustomField>
    <fullName>ilms__Library_Sharing_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Library Sharing Groups</label>
    <referenceTo>ilms__Library__c</referenceTo>
    <relationshipLabel>Shared Certifications</relationshipLabel>
    <relationshipName>Shared_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>